added list result

--- a/Assorti/Assorti/Assorti.csproj
+++ b/Assorti/Assorti/Assorti.csproj
@@ -127,6 +127,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListResultDishes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListResultDishes.Designer.cs">
+      <DependentUpon>ListResultDishes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CalculatePlat.resx">
@@ -134,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListResultDishes.resx">
+      <DependentUpon>ListResultDishes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
